<resources>
    <string name="app_name">DiceRoller2</string>
    <string name="dice_pile">Dice Pile</string>
    <string name="let_s_roll">Let\'s Roll!</string>
    <string name="dice_background">Dice Background</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="die">Die</string>
    <string name="_0">0</string>
    <string name="dice_pic">Dice Pic</string>
    <string name="d100">d%</string>
</resources>
