<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/dicerollerbkgd">
    <Button
            android:text="@string/d4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d4Button" android:textSize="24sp"
            android:onClick="buttonClick"
            android:background="@drawable/d4buttonbkgd" android:textColor="@android:color/background_light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/d6Button"
            app:layout_constraintVertical_chainStyle="spread" android:tag="4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"/>
    <Button
            android:text="@string/d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d6Button"
            android:onClick="buttonClick"
            android:background="@drawable/d6buttonbkgd" android:textColor="@android:color/background_dark"
            android:textSize="24sp" style="@style/Widget.AppCompat.Button"
            app:layout_constraintTop_toBottomOf="@+id/d4Button"
            app:layout_constraintBottom_toTopOf="@+id/d8Button"
            app:layout_constraintStart_toStartOf="@+id/d4Button" app:layout_constraintEnd_toEndOf="@+id/d4Button"
            android:tag="6"/>
    <Button
            android:text="@string/d8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d8Button"
            android:onClick="buttonClick"
            android:textSize="24sp" android:textColor="#812C20"
            android:background="@drawable/d8buttonbkgd"
            app:layout_constraintTop_toBottomOf="@+id/d6Button"
            app:layout_constraintBottom_toTopOf="@+id/d10Button"
            app:layout_constraintStart_toStartOf="@+id/d6Button" app:layout_constraintEnd_toEndOf="@+id/d6Button"
            android:tag="8"/>
    <Button
            android:text="@string/d10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d10Button"
            android:onClick="buttonClick"
            android:background="@drawable/d10buttonbkgd" android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/d8Button"
            app:layout_constraintBottom_toTopOf="@+id/d12Button"
            app:layout_constraintStart_toStartOf="@+id/d8Button" app:layout_constraintEnd_toEndOf="@+id/d8Button"
            android:tag="10"/>
    <Button
            android:text="@string/d12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d12Button"
            android:onClick="buttonClick"
            android:background="@drawable/d12buttonbkgd" android:textSize="24sp"
            android:textColor="#CA9C26"
            app:layout_constraintTop_toBottomOf="@+id/d10Button"
            app:layout_constraintBottom_toTopOf="@+id/d20Button"
            app:layout_constraintStart_toStartOf="@+id/d10Button" app:layout_constraintEnd_toEndOf="@+id/d10Button"
            android:tag="12"/>
    <Button
            android:text="@string/d20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d20Button"
            android:onClick="buttonClick"
            android:background="@drawable/d20buttonbkgd" android:textSize="24sp"
            android:textColor="@android:color/background_light"
            app:layout_constraintTop_toBottomOf="@+id/d12Button"
            app:layout_constraintBottom_toTopOf="@+id/d100button"
            app:layout_constraintStart_toStartOf="@+id/d12Button" app:layout_constraintEnd_toEndOf="@+id/d12Button"
            app:layout_constraintHorizontal_bias="1.0" android:tag="20"/>
    <TextView
            android:text="@string/die"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentDie" android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/dieRoll"
            app:layout_constraintTop_toBottomOf="@+id/dicePic"
            app:layout_constraintBottom_toTopOf="@+id/dieRoll"
            app:layout_constraintStart_toStartOf="@+id/dieRoll" android:textColor="@android:color/white"
    />
    <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dieRoll"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/currentDie"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" android:textColor="@android:color/white"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/dicerollerpic"
            android:id="@+id/dicePic"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="@+id/currentDie"
            app:layout_constraintBottom_toTopOf="@+id/currentDie"
            app:layout_constraintStart_toStartOf="@+id/currentDie" android:contentDescription="@string/dice_pic"/>
    <Button
            android:text="@string/d100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d100button" android:textSize="24sp"
            android:onClick="buttonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d20Button" app:layout_constraintStart_toStartOf="@+id/d20Button"
            app:layout_constraintEnd_toEndOf="@+id/d20Button"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="@android:color/black"
            android:background="@drawable/d100buttonbkgd" android:tag="100"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/dicerollerpic"
            android:id="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/dieRoll"
            android:contentDescription="@string/dice_pic" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
</android.support.constraint.ConstraintLayout>